--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@
 layout: default
 ---
 
+Welcome the the Accelerator's home page!  <br><br>
+
+
+The Accelerator is a tool for fast and reproducible computations.  It
+is released as open source by eBay under the Apache V2.0 license.
