s/computations/data processing/

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ layout: default
 Welcome the the Accelerator's home page!  <br><br>
 
 
-The Accelerator is a tool for fast and reproducible computations.  It
+The Accelerator is a tool for fast and reproducible data processing.  It
 is released as open source by eBay under the Apache V2.0 license.
